// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoatCardComponent With a Goat (v1.0.0) should match the snapshot 1`] = `
<app-goat-card
  awards="undefined"
  born={[Function String]}
  configService={[Function ConfigService]}
  deceased="undefined"
  description={[Function String]}
  forSale="false"
  goat={[Function Object]}
  goatService={[Function GoatService]}
  id={[Function String]}
  identifier={[Function String]}
  image={[Function Object]}
  imageService={[Function ImageService]}
  linearAppraisal={[Function Object]}
  meta={[Function _Meta]}
  name={[Function String]}
  nickname={[Function String]}
  route={[Function Object]}
>
  <div
    class="card color-scheme-secondary"
    test-id="goat"
  >
    <div
      class="px-3 pt-3"
    >
      <img
        alt="TEST_IMAGE_ALT"
        class="card-img-top rounded object-fit-contain"
        height="250"
        test-id="goat-image"
        width="400"
      />
    </div>
    <div
      class="card-body color-scheme-secondary"
      id="TEST_NICKNAME"
    >
      <div
        class="container color-scheme-tertiary pb-3"
      >
        <a
          aria-label="Link to open TEST_NICKNAME's modal (This link cover's the whole element - it does not contain any text)"
          class="stretched-link"
          test-id="goat-link"
        />
        <h5
          class="card-title text-center mb-0"
          test-id="goat-name"
        >
          YOUR GOATS ADGA NAME
        </h5>
        <h6
          class="card-title text-center mb-0"
          test-id="goat-name"
        >
        </h6>
        <h6
          class="card-subtitle pb-1 fw-light fst-italic text-center"
          test-id="goat-age"
        >
          1 day old
        </h6>
        <h6
          class="card-subtitle pb-1 text-center fw-light fst-italic font-monospace"
          test-id="goat-appraisal"
        >
            80 
        </h6>
        <h6
          class="card-subtitle pb-1 text-center"
          test-id="goat-nickname"
        >
          "TEST_NICKNAME"
        </h6>
        <div
          class="card-text text-center text-truncate-3 pt-1"
          test-id="goat-description"
        >
          A quick description about your goat
        </div>
      </div>
    </div>
  </div>
</app-goat-card>
`;

exports[`GoatCardComponent With an empty Goat should match the snapshot 1`] = `
<app-goat-card
  awards="undefined"
  born="undefined"
  configService={[Function ConfigService]}
  deceased="undefined"
  description="undefined"
  forSale="false"
  goat={[Function Object]}
  goatService={[Function GoatService]}
  id="undefined"
  identifier="undefined"
  image={[Function Object]}
  imageService={[Function ImageService]}
  linearAppraisal={[Function Object]}
  meta={[Function _Meta]}
  name="undefined"
  nickname="undefined"
  route={[Function Object]}
>
  <div
    class="card color-scheme-secondary"
    test-id="goat"
  >
    <div
      class="px-3 pt-3"
    >
      <img
        alt="The Requested Image Does Not Exist"
        class="card-img-top rounded object-fit-contain"
        height="250"
        test-id="goat-image"
        width="400"
      />
    </div>
    <div
      class="card-body color-scheme-secondary"
      id="undefined"
    >
      <div
        class="container color-scheme-tertiary pb-3"
      >
        <h5
          class="card-title text-center mb-0"
          test-id="goat-name"
        >
        </h5>
        <h6
          class="card-title text-center mb-0"
          test-id="goat-name"
        >
        </h6>
        <h6
          class="card-subtitle pb-1 text-center fw-light fst-italic font-monospace"
          test-id="goat-appraisal"
        >
            80 
        </h6>
      </div>
    </div>
  </div>
</app-goat-card>
`;

exports[`GoatCardComponent Without a Goat should match the snapshot 1`] = `
<app-goat-card
  configService={[Function ConfigService]}
  forSale="false"
  goatService={[Function GoatService]}
  imageService={[Function ImageService]}
  meta={[Function _Meta]}
  route={[Function Object]}
>
  <div
    class="card color-scheme-secondary"
    test-id="placeholder"
  >
    <div
      class="px-3 pt-3 placeholder-glow"
    >
      <img
        alt="Loading..."
        class="card-img-top rounded border placeholder"
        height="200"
        test-id="placeholder-image"
        width="400"
      />
    </div>
    <div
      class="card-body color-scheme-secondary"
    >
      <div
        class="container color-scheme-tertiary pb-3 text-center placeholder-wave"
      >
        <h5
          class="card-title text-center placeholder"
          test-id="placeholder-name"
        >
          SOME ANIMALS NAME
        </h5>
        <br />
        <h6
          class="card-subtitle pb-2 text-center placeholder"
          test-id="placeholder-nickname"
        >
          "Nickname"
        </h6>
      </div>
    </div>
  </div>
</app-goat-card>
`;
